--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ a {
 
 #root {
     background-color: #FFF;
+    color: #282828;
 }
 
 a:hover {
